padronização de estrutra de codico

--- a/projetoweb/tsconfig.json
+++ b/projetoweb/tsconfig.json
@@ -4,4 +4,13 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
+  ,
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "types": ["react", "react-dom"],
+    "noEmitOnError": false,
+    "importsNotUsedAsValues": "remove",
+    "preserveValueImports": false
+  }
 }
+  
