--- a/projetoweb/tsconfig.app.json
+++ b/projetoweb/tsconfig.app.json
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "context"]
+  "include": ["src", "src/context"]
 }
